--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -15,6 +15,6 @@ jobs:
       - uses: lowlighter/metrics@latest
         with:
           token: ${{ secrets.METRICS_TOKEN }}
-          template: classic
+          template: terminal
           base: header, activity, community, repositories, metadata
           config_timezone: Europe/Paris
